<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->

    <string name="app_name">LocMap</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Log In</string>
    <string name="action_map">Map</string>
    <string name="action_locations">Locations</string>
    <string name="action_collections">Collections</string>
    <string name="title_activity_show_location">ShowLocationActivity</string>

    <!-- Problems, officer -->

    <string name="check_internet">Problems connecting to the Internet. Check your connection and try again</string>
    <string name="internal_problems">Service is temporarily unavailable. Please try again later</string>
    <string name="check_email">Your email address doesn\'t seem to be valid. Try again with a proper address</string>

    <!-- Main Activity -->

    <string name="logout">Log out</string>
    <string name="logged_out">Logged out</string>

    <!-- Show Location Activity -->
    
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    
    <!-- New Location Activity -->

    <string name="title_activity_location">New location</string>
    <string name="getCoordinates">Get coordinates</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="preview">Preview</string>
    <string name="takePicture">Take picture</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="location_updated">Location updated</string>

    <!-- Log in Activity -->

    <string name="title_activity_log_in">Log in</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="notMember">Not a member?</string>
    <string name="register"><u>Register!</u></string>
    <string name="username">username</string>
    <string name="login_fail">Invalid email or password</string>
    <string name="logged_in">Logged in!</string>
    <string name="remember_me">Remember me</string>

    <!-- Register Activity -->

    <string name="title_activity_register">Register</string>
    <string name="email">Email</string>
    <string name="password_conf">Confirm password</string>
    <string name="register_ok">Registered successfully</string>
    <string name="username_reserved">Username you chose is already in use. Try again with a different username</string>
    <string name="email_reserved">Email you typed is already in use. Try again with a different email address</string>
    <string name="password_length">Password needs to be at least 8 characters long</string>
    <string name="password_match">Passwords don\'t match</string>
    <string name="username_characters">Username has some forbidden characters. Use only letters A-Z, Ä, Ö, Å and numbers</string>
    <string name="password_alphanum">Password needs to have at least one letter A-Z and one number</string>

    <!-- Locations Activity -->
    
    <string name="title_activity_locations">Locations</string>
    <string name="new_location">New location</string>
    <string name="my_locations">My Locations</string>
    <string name="near_locations">Locations near me</string>
    <string name="show_on_map">Show on map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Settings Activity -->
    
    <string name="settings_distance_textview">Find locations that are within this distance (kilometers)</string>
    <string name="settings_distance">Distance</string>
</resources>