<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.locmap.locmap.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_login"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/action_login"/>
    
    <item
        android:id="@+id/action_map"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/action_map"/>
    
    <item
        android:id="@+id/action_locations"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/action_locations"/>
    
    <item
        android:id="@+id/action_new_location"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/title_activity_location"/>
    
</menu>
