<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.locmap.locmap.MainActivity" >

    <Button
        android:id="@+id/btnMainLocations"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="20dp"
        android:onClick="btnMainLocations"
        android:gravity="center"
        android:text="@string/action_locations" />

    <Button
        android:id="@+id/btnMainCollections"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/action_collections" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnMainLogIn"
            android:layout_width="0dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:onClick="btnMainLogIn"
            android:gravity="center"
            android:text="@string/action_login" />

        <Button
            android:id="@+id/btnMainSettings"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/action_settings" />
    </LinearLayout>

</LinearLayout>