<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.locmap.locmap.NewLocationActivity" >

    <!-- Textfields for creating new location -->

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title" />
    
    <EditText
        android:id="@+id/editDescription"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:text="@string/desc"
        android:inputType="textMultiLine" />

    <!-- Layouts for latitute and longitude fields plus button for fetching them -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editLatitude"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editLongitude"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btnCoordinates"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center|right"
            android:layout_margin="4dp"
            android:contentDescription="@string/getCoordinates"
            android:src="@android:drawable/ic_menu_compass" />
    </LinearLayout>

    <!-- Camera and image preview -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btnCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:src="@android:drawable/ic_menu_camera"
            android:contentDescription="@string/takePicture"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/imgPreview"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_weight="0.5"
            android:contentDescription="@string/preview"
            android:layout_gravity="right" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <Button 
            android:id="@+id/btnCancel" 
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp" />
        
        <Button
            android:id="@+id/btnSave" 
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp" />
    </LinearLayout>

</LinearLayout>